# planetary-flow

./: .gitignore  LICENSE  Makefile  README.md  feature_tracking.md  pyproject.toml  todo.md
docs/: pf_diagrams.drawio
notebooks/: README.md  global_alignment_poc.ipynb  global_quality_poc.ipynb  object_detector.ipynb  patch_grid_poc.ipynb  segmentation.ipynb  segmentation_poc.ipynb
planetaryflow/: threshold.py
scripts/: build_reference_frame.py  generate_test_video.py  process_test_video.py
src/: constants.py  threshold.py
src/planetaryflow/: alignment.py  cli.py  constants.py  io.py  player.py  segment.py  segmentation.py  stabilization.py  utils.py
test/: test_cli.py  test_smoke.py
tests/: test_cli.py  test_io.py  test_smoke.py
