[tool.poetry]
name = "planetaryflow"
version = "0.1.0"
description = ""
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pf = "planetaryflow.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
